# arxiv-batch-download-alter

./: .gitignore  EBSCO_getpdf.py  INFORMS_getpdf.py  README.md  __init__.py  ascii_art.txt  check.py  download_from_csv.py  filter.py  get_paper_info_to_csv.py  keywords_filter.py  pyproject.toml  rename.py
