[project]
name = "arxiv-batch-download"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.0",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "selenium>=4.34.2",
    "tqdm>=4.67.1",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]
